# obs-football-plugin

./: .gitignore  CMakeLists.txt  README.md  buildspec.json
.github/workflows/: build.yml
assets/fonts/: .gitkeep
data/obs-plugins/obs-football/locale/: en-US.ini  es-ES.ini
data/obs-plugins/obs-football/shaders/: scorebug.glsl
src/: api-football.cpp  api-football.hpp  football-source.cpp  football-source.hpp  plugin-main.cpp  scoreboard.cpp  scoreboard.hpp  timer.cpp  timer.hpp
src/graphics/: lower-third.cpp  lower-third.hpp  renderer.cpp  renderer.hpp  scorebug.cpp  scorebug.hpp  transitions.cpp  transitions.hpp
src/ui/: control-dock.cpp  control-dock.hpp  settings-dialog.cpp  team-editor.cpp  team-editor.hpp
